# novel-comment-crawler

./: .gitignore  config.py  main.py  pyproject.toml  settings.toml
utils/: consts.py  helpers.py  httpclient.py  logger.py  repository.py  scraper.py  types.py
